chore: Switch to esm, use tape (#8)
* chore: switch to esm

* fix: run npm audit fix

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
-    "extends": "@slimio/eslint-config",
+    "extends": "@nodesecure/eslint-config",
+    "parserOptions": {
+        "sourceType": "module",
+        "requireConfigFile": false
+    },
     "rules": {
         "jsdoc/require-jsdoc": "off"
     }
