fix(package): add missing index.js in files whitelist

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "GENTILHOMME Thomas <gentilhomme.thomas@gmail.com>",
   "files": [
     "index.d.ts",
+    "index.js",
     "src"
   ],
   "license": "MIT",
